<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/baseActStyle"
    android:orientation="vertical"

    tools:context=".activity.SettingActivity">

    <include layout="@layout/toolbar" />

    <TextView
        android:id="@+id/version"
        style="@style/item_setting"
        android:layout_marginTop="10dp"
        android:text="@string/version" />

    <TextView
        android:id="@+id/server"
        style="@style/item_setting"
        android:layout_marginTop="10dp"
        android:text="@string/server" />

    <TextView
        android:id="@+id/checkUpdate"
        style="@style/item_setting"
        android:layout_marginTop="2dp"
        android:text="@string/check_update" />

</android.support.v7.widget.LinearLayoutCompat>